# phishing-detector

./: .bandit  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .isort.cfg  .pre-commit-config.yaml  .semgrepignore  CODEOWNERS  DEPLOYMENT.md  Dockerfile  Dockerfile.minimal  Dockerfile.simple  Makefile  README.md  docker-compose.yml  mypy.ini  prometheus.yml  pyproject.toml  requirements.minimal.txt  requirements.txt
.claude/agents/: cicd-devsecops-architect.md
.github/workflows/: ci.yml  deploy-production.yml  release.yml
deployment/: cloud-run.yaml  secrets-setup.sh
docs/: DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  RUNBOOK.md
examples/: test_cases.json
gmail-addon/: Code-final.gs  Code.gs  appsscript.json
monitoring/: alert-rules.yaml  grafana-dashboard.json
scripts/: deploy-production.sh  gcp-setup.sh  setup-github-secrets.sh  setup-gmail-addon.sh  test_api.py
security/: bandit.yaml  semgrep-rules.yaml
src/: __init__.py  app.py  claude_client.py  gemini_client.py  header_analysis.py  nlp_features.py  redaction.py  schema.py  service.py  simple_app.py  url_analysis.py
terraform/: main.tf  monitoring.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_api.py  test_header_analysis.py  test_service.py
